<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.tourmaline.example.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/permission_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/permissions"/>

            <Button
                android:id="@+id/permissions_button"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/monitoring_permission_title"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/alert_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alert_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/monitoring_permission_location_title"/>

                <TextView
                    android:id="@+id/alert_activity_recognition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/monitoring_permission_recognition_title"/>

                <TextView
                    android:id="@+id/alert_battery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/monitoring_permission_battery_title"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tlkit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/black"
                android:minHeight="0.5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginTop="8dp"
                android:text="@string/tlkit"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/start_stop_button"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/start_monitoring"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tlkit_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tlkit_monitoring_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tlkit_authentication_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/api_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/black"
                android:minHeight="0.5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/monitoring_apis" />

            <Button
                android:id="@+id/locations_button"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/locations"
                android:textSize="16sp" />

            <Button
                android:id="@+id/trips_button"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/trips"
                android:textSize="16sp" />

            <Button
                android:id="@+id/telematics_button"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/telematics"
                android:textSize="16sp" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>
